--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "plugins": ["prettier"],
+    "plugins": [
+      "prettier"
+    ],
     "extends": [
       "react-app",
       "plugin:prettier/recommended"
@@ -36,20 +38,26 @@
     ]
   },
   "dependencies": {
+    "bm-react-handson": "file:",
     "json-server": "0.17.4",
+    "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.11"
+    "styled-components": "5.3.11",
+    "uuid": "10.0.0",
+    "zustand": "4.5.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "28.1.8",
+    "@types/lodash": "4.17.12",
     "@types/node": "16.18.114",
     "@types/react": "17.0.83",
     "@types/react-dom": "17.0.25",
     "@types/styled-components": "5.1.34",
+    "@types/uuid": "10.0.0",
     "eslint-config-prettier": "8.10.0",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.8.8",
